<resources>
    <string name="app_name">信号实时检测</string>
    <string name="title_signal">信号检测</string>
    <string name="station">站点</string>
    <string name="hint">请输入站点名</string>
    <string name="the_4g">4G</string>
    <string name="the_3g">3G</string>
    <string name="the_2g">2G</string>
    <string name="inmoble">移动</string>
    <string name="inunicom">联通</string>
    <string name="inlte">电信</string>
    <string name="begin">检测</string>
    <string name="cat">截屏</string>
    <string name="save">记录</string>
    <string name="cancel">取消</string>
    <string name="allcheck">全选</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>
</resources>
