<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.you.signaldemo.RecordActivity">
    <TextView
        android:id="@+id/record_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/title_text"
        android:text="截图记录" />
    <View
        android:id="@+id/below_title_line"
        android:layout_below="@id/record_title"
        style="@style/line_style"
        />

    <ListView
        android:layout_above="@id/bottom_layout"
        android:layout_below="@+id/below_title_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:id="@+id/picList"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNull"
        android:layout_centerInParent="true"
        android:text="暂无截图记录"
        android:textSize="16sp"
        android:textColor="@color/rejected_color_press"
        android:visibility="invisible"
        />
    <!--底部菜单栏-->
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        >
        <LinearLayout
            style="@style/bottom_layout_option"
            >
            <Button
                android:id="@+id/cancel"
                android:background="@drawable/cancel"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                style="@style/bottom_text"
                android:text="@string/cancel"/>
        </LinearLayout>
        <LinearLayout
            style="@style/bottom_layout_option"
            >
            <Button
                android:id="@+id/allcheck"
                android:background="@drawable/allcheck"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:id="@+id/tvAll"
                style="@style/bottom_text"
                android:text="@string/allcheck"/>
        </LinearLayout>
        <LinearLayout
            style="@style/bottom_layout_option"
            >
            <Button
                android:id="@+id/imgDelete"
                android:background="@drawable/delete"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                style="@style/bottom_text"
                android:text="@string/delete"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/the_line"
        android:layout_above="@id/bottom_layout"
        style="@style/line_style"
        android:visibility="gone"
        />
</RelativeLayout>
