<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.you.signaldemo.MainActivity"
    >
    <ImageView
        android:id="@+id/launch_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_img"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/bg_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/bg"
        >
        <!--标题-->
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/title_text"
            android:text="@string/title_signal" />
        <!--输入站点框-->
        <View
            android:id="@+id/input_above_line"
            android:layout_below="@id/title"
            style="@style/line_style"/>
        <LinearLayout
            android:id="@+id/input_et_layout"
            android:layout_below="@id/input_above_line"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/input_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_station_edit"
                android:singleLine="true"
                android:hint="@string/hint"
                android:textColorHint="@color/hint"
                android:textColor="@color/rejected_color_press"
                android:textSize="13sp"
                />
        </LinearLayout>
        <View
            android:id="@+id/input_below_line"
            android:layout_below="@id/input_et_layout"
            style="@style/line_style"/>

        <!--信号分类、4g、3g、2g-->
        <LinearLayout
            android:id="@+id/signal_type_layout"
            android:layout_below="@id/input_below_line"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="60dp"
            >
            <TextView
                android:id="@+id/the_4G"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_4g"
                android:textColor="@color/rejected_color_press"
                android:textSize="16sp"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/the_3G"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_3g"
                android:textColor="@color/rejected_color_press"
                android:textSize="16sp"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/the_2G"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_2g"
                android:textColor="@color/rejected_color_press"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <View
            android:id="@+id/the_second_line"
            android:layout_below="@id/signal_type_layout"
            style="@style/line_style"
            />

        <!--移动信号强度-->
        <LinearLayout
            android:id="@+id/inmoble_layout"
            android:layout_below="@id/the_second_line"
            style="@style/operator_layout"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inmoble_logo"
                    android:src="@drawable/inmoble"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    />
                <TextView
                    android:text="@string/inmoble"
                    style="@style/operator_header_text"
                    />
            </LinearLayout>
            <!--移动4g信号强度-->
            <LinearLayout
                android:id="@+id/inmoble_4g_layout"
                android:layout_marginLeft="22dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inmoble_4g_img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/no_signal"/>
                <ProgressBar
                    android:id="@+id/inmoble_4g_reflesh"
                    style="@style/processbar_loading"
                    />
                <TextView
                    android:id="@+id/inmoble_4g_dbm"
                    style="@style/operator_option_dbm"
                    />
            </LinearLayout>
            <!--移动3g信号强度-->
            <LinearLayout
                android:id="@+id/inmoble_3g_layout"
                android:layout_marginLeft="40dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inmoble_3g_img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/no_signal"/>
                <ProgressBar
                    android:id="@+id/inmoble_3g_reflesh"
                    style="@style/processbar_loading"
                    />
                <TextView
                    android:id="@+id/inmoble_3g_dbm"
                    style="@style/operator_option_dbm"
                    />
            </LinearLayout>
            <!--移动2g信号强度-->
            <LinearLayout
                android:id="@+id/inmoble_2g_layout"
                android:layout_marginLeft="40dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inmoble_2g_img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/no_signal"/>
                <ProgressBar
                    android:id="@+id/inmoble_2g_reflesh"
                    style="@style/processbar_loading"
                    />
                <TextView
                    android:id="@+id/inmoble_2g_dbm"
                    style="@style/operator_option_dbm"
                    />
            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/the_third_line"
            android:layout_below="@id/inmoble_layout"
            style="@style/line_style"
            />

        <!--联通信号强度-->
        <LinearLayout
            android:id="@+id/inunicom_layout"
            android:layout_below="@id/inmoble_layout"
            style="@style/operator_layout"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inunicom_logo"
                    android:src="@drawable/inunicom"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    />
                <TextView
                    android:text="@string/inunicom"
                    style="@style/operator_header_text"
                    />
            </LinearLayout>
            <!--联通4g信号强度-->
            <LinearLayout
                android:id="@+id/inunicom_4g_layout"
                android:layout_marginLeft="22dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inunicom_4g_img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/no_signal"/>
                <ProgressBar
                    android:id="@+id/inunicom_4g_reflesh"
                    style="@style/processbar_loading"
                    />
                <TextView
                    android:id="@+id/inunicom_4g_dbm"
                    style="@style/operator_option_dbm"
                    />
            </LinearLayout>
            <!--联通3g信号强度-->
            <LinearLayout
                android:id="@+id/inunicom_3g_layout"
                android:layout_marginLeft="40dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inunicom_3g_img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/no_signal"/>
                <ProgressBar
                    android:id="@+id/inunicom_3g_reflesh"
                    style="@style/processbar_loading"
                    />
                <TextView
                    android:id="@+id/inunicom_3g_dbm"
                    style="@style/operator_option_dbm"
                    />
            </LinearLayout>
            <!--联通2g信号强度-->
            <LinearLayout
                android:id="@+id/inunicom_2g_layout"
                android:layout_marginLeft="40dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inunicom_2g_img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/no_signal"/>
                <ProgressBar
                    android:id="@+id/inunicom_2g_reflesh"
                    style="@style/processbar_loading"
                    />
                <TextView
                    android:id="@+id/inunicom_2g_dbm"
                    style="@style/operator_option_dbm"
                    />
            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/the_fourth_line"
            android:layout_below="@id/inunicom_layout"
            style="@style/line_style"
            />

        <!--电信信号强度-->
        <LinearLayout
            android:id="@+id/inlte_layout"
            android:layout_below="@id/inunicom_layout"
            style="@style/operator_layout"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inlte_logo"
                    android:src="@drawable/inlte"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    />
                <TextView
                    android:text="@string/inlte"
                    style="@style/operator_header_text" />
            </LinearLayout>
            <!--电信4g信号强度-->
            <LinearLayout
                android:id="@+id/inlte_4g_layout"
                android:layout_marginLeft="22dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inlte_4g_img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/no_signal"/>
                <ProgressBar
                    android:id="@+id/inlte_4g_reflesh"
                    style="@style/processbar_loading"
                    />
                <TextView
                    android:id="@+id/inlte_4g_dbm"
                    style="@style/operator_option_dbm"
                    />
            </LinearLayout>
            <!--电信2g信号强度-->
            <LinearLayout
                android:id="@+id/inlte_2g_layout"
                android:layout_marginLeft="140dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/inlte_2g_img"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/no_signal"/>
                <ProgressBar
                    android:id="@+id/inlte_2g_reflesh"
                    style="@style/processbar_loading"
                    />
                <TextView
                    android:id="@+id/inlte_2g_dbm"
                    style="@style/operator_option_dbm"
                    />
            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/the_fifth_line"
            android:layout_below="@id/inlte_layout"
            style="@style/line_style"
            />

        <!--底部菜单栏-->
        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_alignParentBottom="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            >
            <LinearLayout
                style="@style/bottom_layout_option"
                >
                <Button
                    android:id="@+id/btn_begin"
                    android:background="@drawable/btn_begin_bg"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
                <TextView
                    style="@style/bottom_text"
                    android:text="@string/begin"/>
            </LinearLayout>
            <LinearLayout
                style="@style/bottom_layout_option"
                >
                <Button
                    android:id="@+id/btn_cat"
                    android:background="@drawable/btn_cat_bg"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
                <TextView
                    style="@style/bottom_text"
                    android:text="@string/cat"/>
            </LinearLayout>
            <LinearLayout
                style="@style/bottom_layout_option"
                >
                <Button
                    android:id="@+id/btn_save"
                    android:background="@drawable/btn_save_bg"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
                <TextView
                    style="@style/bottom_text"
                    android:text="@string/save"
                    />
            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/the_line"
            android:layout_above="@id/bottom_layout"
            style="@style/line_style"
            />
    </RelativeLayout>
</LinearLayout>
